--- a/style.css
+++ b/style.css
@@ -74,3 +74,9 @@ a{
 .single-exp-bg-green{
     border-left:5px solid rgb(5, 69, 73);
 }
+.footer{
+    padding:50px 0;
+}
+.footer p{
+    text-align:center;
+}
